# RControl

./: CMakeLists.txt
header/: parsecommand.h  serversocket.h
source/: main.cpp  parsecommand.cpp  serversocket.cpp
